# DSS_source

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  first.mov  generate_project.sh  main.cpp
projects/: ArialBlack.bmglyph  BaseFont.bmglyph  Font_72.bmglyph
src/: CMakeLists.txt
src/assets/fonts/: FranklinGothicMedium.json  FranklinGothicMedium.lua
src/assets/shaders/: StandardShader2.frag  shader.fsh  shader.vsh
src/cpp/: BackgroundRenderer.cpp  BackgroundRenderer.h  BitmapFont.cpp  BitmapFont.h  Camera.cpp  Camera.h  Date.cpp  Date.h  DebugSystem.h  Destination.h  Direction.h  GameCard.cpp  GameCard.h  GameModelData.cpp  GameModelData.h  GameModelViewData.cpp  GameModelViewData.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  ListItemNode.cpp  ListItemNode.h  MLBGameLoader.cpp  MLBGameLoader.h  MLBJsonModel.h  MaterialProperty.cpp  MaterialProperty.h  MeshGeometry.cpp  MeshGeometry.h  Node.cpp  Node.h  Position.h  PubSub.cpp  PubSub.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SpriteAtlasGenerator.cpp  (+8 more)
src/platform/macos/: CMakeLists.txt
